fixed home page overflowing out of root

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
   display:flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
   background-color: #535bf2;
 }
 
